Alterando resposta "Ignorado" como padrão para pergunta "Já 	interrompeu alguma atividade do dia-a-dia por cansaço ou falta de ar"

--- a/media/index.html
+++ b/media/index.html
@@ -865,7 +865,7 @@
 					<div id='divInterrompeuAtividade' class='secondary sinais'>
 						<label for='interrompeuAtividade'> Já interrompeu alguma atividade do dia-a-dia por cansaço ou falta de ar:</label>
 						<select name='interrompeuAtividade' id='cansaco' class='selectOneSinais'>
-							<option value='ignorado' selected> Ignorado  </option>
+							<option value='ignorado'> Ignorado  </option>
 							<option value='sim'> Sim  </option>
 							<option value='nao'> N&atilde;o  </option>
 						</select>
