Campo "Expectoração" salva todas as opções (não apenas 'Ignorado')

--- a/media/index.html
+++ b/media/index.html
@@ -438,7 +438,8 @@
 					<div class='wrap'>
 						<div id='divExpectoracao' class='primary required sinais'>
 							<label for='expectoracao'>Expectoração:</label>
-							<select name='espectoracao' id='expectoracao' class='selectOneSinais sinais required'>
+							<select name='expectoracao' id='expectoracao' class='selectOneSinais sinais required'>
+								<option value='' > </option>
 								<option value='ignorado' selected> Ignorado  </option>
 								<option value='nao'> N&atilde;o  </option>
 								<option value='sim'> Sim  </option>
