Pergunta "Já interrompeu alguma atividade do dia-a-dia por cansaço 	ou falta de ar" agora salva outras opções além de "Ignorado"

--- a/media/index.html
+++ b/media/index.html
@@ -800,9 +800,9 @@
 					<div id='divCansaco' class='secondary sinais'>
 						<label for='cansaco'> Apresenta cansaço maior do que pessoas de sua idade durante atividades física:</label>
 						<select name='cansaco' id='cansaco' class='selectOneSinais'>
-							<option value='ignorado' selected> Ignorado  </option>
+							<option value='ignorado'> Ignorado  </option>
 							<option value='sim'> Sim  </option>
-							<option value='nao'> N&atilde;o  </option>
+							<option value='nao'> Não  </option>
 						</select>
 					</div>
 					<div id='divInterrompeuAtividade' class='secondary sinais'>
