Deixando o campo "Conduta" em aberto, porém obrigatório.

--- a/media/index.html
+++ b/media/index.html
@@ -892,17 +892,9 @@
 				</fieldset>
 				<fieldset>
 					<legend>Conduta </legend>
-					<div id='divCondutaProvavelTbResistente' class='secondary'>
-						<label for='conduta' class='desfecho'> Agilizar realização de BAAR, cultura e teste de sensibilidade </label>
-					</div>
-					<div id='divCondutaNaoProvavelTbResistente_tosse' class='secondary'>
-						<label for='conduta' class='desfecho'> Realizar BAAR e, quando possível, cultura para microbactéria </label>
-					</div>
-					<div id='divCondutaNaoProvavelTbResistente_pulmao' class='secondary'>
-						<label for='conduta' class='desfecho'> Agilizar consulta para médico do pulmão, se possível </label>
-					</div>
-					<div id='divCondutaNaoProvavelTbResistente_consulta'>
-						<label for='conduta' class='desfecho'> Encaminhar para consulta clínico geral <label>
+					<div id='divConduta' class='required'>
+						<label for='conduta'> Conduta: </label>
+						<input type='text' class='required text'/>
 					</div>
 				</fieldset>
 				<fieldset>
