Retirando respostas induzidas para "Desfecho" e "Conduta"

--- a/media/index.html
+++ b/media/index.html
@@ -1070,12 +1070,12 @@
 					</div>
 					<div id='divOutrosExames' name='divOutrosExames' class='secondary'>
 						<label for='outrosExames'>Outro: </label>
-							<input type='text' id='outrosExames' name='outrosExames' class='required'/>
+							<input type='text' id='outrosExames' name='outrosExames' class='required text textbox'/>
 					</div>
 					<br /><br />
-					<div id='divOutrasCondutas' class='primary required'>
-						<label for='outrasCondutas' class='labelTextarea'> Outras condutas: </label>
-						<textarea name="outrasCondutas" id="outrasCondutas" rows="5"></textarea>
+					<div id='divOutrasCondutas' class='primary'>
+						<label for='outrasCondutas'> Outras condutas: </label>
+						<input type="text" name="outrasCondutas" id="outrasCondutas" class="textbox text"/>
 					</div>
 				</fieldset>
 				<fieldset>
