Retirando pergunta "Data do fim da entrevista"; 	Alterando ordem das perguntas "Como o entrevistador avalia as 	respostas da entrevista realizada" e "Avaliado por: "; 	Alterações realizadas de acordo com o formulário enviado pela 	Pryscila em 11 de Outubro de 2011.

--- a/media/index.html
+++ b/media/index.html
@@ -912,17 +912,13 @@
 					</div>
 				</fieldset>
 				<fieldset>
+					<div id='divAvaliacao' class='primary required'>
+						<label for='avaliacao'> Como o entrevistador avalia as respostas da entrevista realizada? (0 a 10) </label>
+						<input type='text' name='avaliacao' id='avaliacao' class='number' size='2' maxlength='2'/>
+					</div>
 					<div id='divAvaliador' class='primary required'>
 						<label for='avaliador'> Avaliado por: </label>
 						<input type="text" name="avaliador" id="avaliador" class='textbox required text'/>
-					</div>
-					<div id='divAvaliacao' class='primary required'>
-						<label for='avaliacao'> Como o entrevistador avalia a confiabilidade das respostas do entrevistado? (0 a 10) </label>
-						<input type='text' name='avaliacao' id='avaliacao' class='number' size='2' maxlength='2'/>
-					</div>
-					<div id='divDataFimTriagem' class='primary required'>
-						<label for='dataFimTriagem'> Data do fim da entevista: </label>
-						<input type="text" name="dataFimTriagem" id="dataFimTriagem" class='textbox required' readonly/>
 					</div>
 					<div class='submit'><input id="submitButton" value="Enviar Formulário"  class='inputButton'  type="submit"></div>
 				</fieldset>
