Trocando o nome do formulário "Triagem Intervenção Resistência" para 	"Triagem Intervenção Resistência (Ambulatório)"

--- a/media/index.html
+++ b/media/index.html
@@ -23,7 +23,7 @@
 		@import url(./css/jquery.timeentry.css);
 	-->
 	</style>
-	<title> Triagem de Pacientes - Intervenção (Resistência) </title>
+	<title> Triagem de Pacientes - Intervenção Resistência (Ambulatório)</title>
 </head>
 <body>
 	<div id='mainFrame'>
